--- a/homework_11/style.css
+++ b/homework_11/style.css
@@ -720,3 +720,167 @@ span.h2pink {
         margin-right: 23px;
     }
 }
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .container {
+        width: 359px;
+    }
+
+    .top__container {
+        width: 375px;
+    }
+
+    .logo {
+        margin-left: 16px;
+    }
+
+    .head__buttons {
+        width: 32px;
+        margin-right: 26px;
+        overflow-x: hidden;
+    }
+
+    .image {
+        display: none;
+    }
+
+    .right__side__head {
+        display: flex;
+        flex-direction: row;
+        margin-left: 56px;
+        margin-top: 148px;
+        margin-bottom: 149px;
+        margin-right: 56px;
+        width: 263px;
+        height: 66px;
+    }
+
+    .rectangle {
+        height: 61px;
+        margin-right: 15px;
+    }
+    
+    .text {
+        padding-top: 6px;
+        font-size: 38px;
+        line-height: 0.7;
+    }
+    
+    span.h2 {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .top__cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 343px;
+        height: auto;
+        margin: auto;
+        margin-top: 64px;
+
+        gap: 32px;
+    }
+
+    .top__card__big {
+        grid-area: 4 / 1 / 5 / 2;
+        height: 111px;
+    }
+
+    .top__card__big img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .products {
+        margin-top: 64px;
+    }
+
+    .all__cards {
+        display: grid;
+        grid-template-columns: 1fr;
+        margin-top: 64px;
+    }
+    
+    .all__prod__button {
+        margin-top: 41px;
+    }
+
+    .footer__info {
+        width: 375px;
+        gap: 46px;
+    }
+
+    .footer__subscribe {
+        height: 550px;
+        width: 375px;
+    }
+    .footer__blur {
+        height: 550px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 48px;
+    }
+
+    .footer__navbar {
+        width: 375px;
+        height: 143px;
+        flex-direction: column-reverse;
+    }
+
+    .footer__navbar p {
+        margin-left: 0px;
+        margin-bottom: 9px;
+    }
+    
+    .footer__navbar__icons {
+        margin-right: 0px;
+        margin-top: 43px;
+    }
+
+    .footer__subscribe__info {
+        width: 343px;
+        height: 194px;
+        justify-content: space-between;
+    }
+    
+    .footer__subscribe__info p {
+        height: 73px;
+        font-size: 18px;
+    }
+    
+    .footer__subsc_subsc {
+        width: 341px;
+        height: 123px;
+    }
+    
+    .footer__subsc_subsc__text {
+        text-align: center;
+    }
+    
+    .footer__subsc_subsc__text h2 {
+        line-height: 36px;
+    }
+    
+    .footer__subsc_subsc__text p {
+        font-size: 14px;
+        line-height: 21.45px;
+    }
+    
+    .footer__subsc__form__btn form{
+        width: 341px;
+        height: 47px;
+    }
+
+    .footer__subsc__form__btn input{
+        width: 245px;
+    }
+    
+    .footer__subsc__form__btn button{
+        width: 95.7px;
+        height: 47px;
+    }
+}
